# glosos

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  VERSION  agent.py  agent.py.bak  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  run_token_agent.js  run_token_agent.py  run_token_agent_firebase.py  script_scheduler.py  secret_agent.py  sounds.py  token_agent.py
config/: .env.example  defaults.toml
scripts/: install_minimal.sh  recover_from_backups.py  setup.sh  watch_live_setting.js
