[project]
name = "glosos"
version = "0.0.8"
requires-python = ">=3.14"
dependencies = [
    "livekit-agents[google,silero,turn-detector]~=1.4",
    "livekit-plugins-noise-cancellation~=0.2",
    "google-genai==1.64.0",
    "python-dotenv>=1.2.1",
    "pypdf",
    "pdfplumber",
    "pandas",
    "matplotlib",
    "openpyxl",
    "xlsxwriter",
    "orjson",
    "ruamel.yaml",
    "Pillow",
    "python-docx",
    "python-pptx",
    "reportlab",
    "httpx",
    "beautifulsoup4",
    "lxml",
    "trafilatura",
    "feedparser",
    "duckduckgo-search",
]
